# rt-md

./: .gitignore  Cargo.toml  Gemfile  MANUAL_INSTALL.md  README.md  flake.nix  pyproject.toml
3dparty/publicsuffix/: README.md
allowlist/local/: README.md  local-tld.list
allowlist/popularity/: README.md
datasets/adversial-md/: Makefile  README.md  all_clients  client.oracle  dat  dataset.toml  eval.csv  eval.csv.zst  generate.py  generator.py  lorem.txt  val_all_domains.list  val_tp_clients.list  val_tp_domains.list
datasets/background/: generate-empty-background.py  merge.py  per-resolver-merge.py
datasets/graph-tunnel/: .gitignore  README.md  dataset.py  dataset.toml  merge-traffic.sh  plot.py  preprocess.py  scrape-unique.py  statistics.rb  transform.py  transform_desc.py  translate.rb  val_tp_clients.list  val_tp_domains.list
datasets/real-world/: README.md  naive.py
datasets/ziza/: README.md  bad_clients  bad_domains  config.toml  dataset_description.txt  english_words.txt  process.py  pt_bfcms_allowlist.txt  pt_domain_allowlist.txt  (+2 more)
exp/: additive.sh  bench.sh  bfcms-sensitivity.sh  bfcms-threshold.sh  compare.sh  peacetime.sh  tune.sh  uniqd-sensitivity.sh  uniqd-threshold.sh  vars.sh
frontend/: index.htm
patches/: ibHH.patch
plot/: additive.R  bfcms-reset-interval-sensitivity.R  bfcms-threshold-sensitivity.R  real-world-throughput-and-resource.py  reset-interval-sensitivity.R  sensitivity-dataset.R  uniqd-reset-interval-sensitivity.R  uniqd-threshold-sensitivity.R
scripts/: additive-export.sh  alert-series-export.py  batch-run.sh  bench-report-export.sh  bfcms-reset-interval-exp-export.sh  bfcms-threshold-exp-export.sh  compare-table-export.sh  constants.py  host-alerts-export.py  human-ops-export.py  online-alerts-export.sh  resource-usage-export.py  scrape.sh  throughput-export.py  uniqd-reset-interval-exp-export.sh  uniqd-threshold-exp-export.sh
src/: algo.rs  allowlist.rs  cache.rs  cli.rs  dataset.rs  domain.rs  lib.rs  main.rs  method.rs  syslog.rs
(+15 files in other folders)
