[package]
name = "dns-exf-detect"
default-run = "dns-exf-detect"
version = "0.1.0"
edition = "2024"


[profile.profiling]
inherits = "release"
debug = true

[dependencies]
addr = { version = "0.15.6", default-features = false, features = ["publicsuffix"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.38", features = ["derive"] }
color-eyre = "0.6.3"
csv = "1.3.1"
dsrs = "0.6.1"
fastbloom = "0.9.0"
fasthash = "0.4.0"
getrandom = { version = "0.3.2", features = ["std"] }
hashbrown = { version = "0.15.2", features = ["serde"] }
hyperloglogplus = "0.4.1"
indicatif = "0.17.11"
nix = { version = "0.30.1", features = ["fs"] }
nutype = "0.6.1"
parquet = "55.2.0"
arrow-array = "*"
publicsuffix = { version = "2.3.0", features = ["std", "anycase"], path = "3dparty/publicsuffix" }
serde = { version = "1.0.219", features = ["derive"] }
snafu = { version = "0.8.5", default-features = false, features = ["std", "rust_1_81", "backtrace"] }
streaming_algorithms = "0.3.0"
toml = "0.8.22"
unicase = "2.8.1"
xorfilter-rs = "0.5.1"
enum_dispatch = "0.3.13"
elasticsearch = "9.0.0-alpha.1"
tokio = { version = "1.47.0", features = ["full"] }
serde_json = "1.0.141"
flate2 = "1.1.2"
backon = "1.5.1"
zstd = "0.13.3"
itertools = "0.14.0"
priority-queue = { version = "2.7.0", features = ["serde"] }
moka = { version = "0.12.11", features = ["sync"] }
arc-swap = "1.7.1"
ctrlc = "3.5.1"
axum = "0.8.7"
tower-http = { version = "0.6.6", features = ["fs"] }

